--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
             "name": "Python Debugger: Current File with Arguments",
             "type": "debugpy",
             "request": "launch",
-            "program": "${file}",
+            "program": "src/pathfind/main.py",
             "console": "integratedTerminal",
-            "args": "config.yaml --plot"
+            "args": "example/config.yaml --plot"
         }
     ]
 }
